--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <h2 class="section-title text-4xl md:text-5xl text-gold-400 mb-4">Media</h2>
                 <div class="w-24 h-1 bg-gold-500 mx-auto"></div>
                 <p class="text-xl text-gold-200 mt-4 max-w-2xl mx-auto">
-                    Witness the dark beauty of our world through these glimpses into Veles' Legacy
+                    Witness the dark beauty of our world through these glimpses into Kolovrat Legacy
                 </p>
             </div>
             
@@ -377,7 +377,7 @@
                         <iframe class="w-full h-full" src="https://www.youtube.com/embed/xSNW3i8IRuo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <h3 class="text-xl text-white mt-4">Announcement Trailer</h3>
-                    <p class="text-gray-400">First look at Veles' Legacy</p>
+                    <p class="text-gray-400">First look at Kolovrat' Legacy</p>
                 </div>
 
                 <!-- Second video: Static video -->
