--- a/index.html
+++ b/index.html
@@ -393,28 +393,7 @@
             <h3 class="text-xl text-white mt-4">Immerse yourself in world of old Gods</h3>
             <p class="text-gray-400">Where no cowardice is tolerated and weakness punishable by death</p>
 
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-8">
-                <div class="fade-in">
-                    <div class="aspect-square rounded-lg overflow-hidden border border-gold-500/30 hover:border-gold-500/60 transition-colors cursor-pointer">
-                        <img src="">
-                    </div>
-                </div>
-                <div class="fade-in">
-                    <div class="aspect-square rounded-lg overflow-hidden border border-gold-500/30 hover:border-gold-500/60 transition-colors cursor-pointer">
-                        <img src="">
-                    </div>
-                </div>
-                <div class="fade-in">
-                    <div class="aspect-square rounded-lg overflow-hidden border border-gold-500/30 hover:border-gold-500/60 transition-colors cursor-pointer">
-                        <img src="" class="w-full h-full object-cover">
-                    </div>
-                </div>
-                <div class="fade-in">
-                    <div class="aspect-square rounded-lg overflow-hidden border border-gold-500/30 hover:border-gold-500/60 transition-colors cursor-pointer">
-                        <img src="">
-                    </div>
-                </div>
-            </div>
+             <h1 class="text-xl text-white mt-4"> Coming Soon</h1>
         </div>
     </section>
 
