--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </nav>
     
     <!-- Hero Section -->
-    <section class="min-h-screen flex items-center justify-center relative overflow-hidden parallax-bg" style="background-image: url('https://images.unsplash.com/photo-1605106702734-205df224ecce?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
+    <section class="min-h-screen flex items-center justify-center relative overflow-hidden parallax-bg" style="background-image: url('https://i.pinimg.com/originals/36/09/a5/3609a58f09f1c9c87fea4cf875b564b7.gif')">
         <div class="absolute inset-0 bg-black/70"></div>
         <div class="container mx-auto px-6 relative z-10 text-center fade-in">
             <h1 class="text-5xl md:text-7xl font-bold mb-6 text-gold-400">
