--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         <iframe class="w-full h-full" src="https://www.youtube.com/embed/xSNW3i8IRuo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <h3 class="text-xl text-white mt-4">Announcement Trailer</h3>
-                    <p class="text-gray-400">First look at Kolovrat' Legacy</p>
+                    <p class="text-gray-400">First look at Kolovrat's Legacy</p>
                 </div>
 
                 <!-- Second video: Static video -->
