--- a/index.html
+++ b/index.html
@@ -165,11 +165,9 @@
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <div class="kolovrat-symbol mr-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#d4af37" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="10" />
-                        <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z" />
-                    </svg>
+                    <img src="path/to/your/logo_simbol.png" alt="Kolovrat Symbol" width="40" height="40">
                 </div>
+
                 <a href="#" class="logo-font text-3xl text-gold-500 hover:text-gold-300 transition-colors">
                     <span class="text-gold-400">Kolovrat</span> <span class="text-white">Studio</span>
                 </a>
@@ -547,11 +545,9 @@
                 <div>
                     <div class="flex items-center mb-4">
                         <div class="kolovrat-symbol mr-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#d4af37" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10" />
-                                <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z" />
-                            </svg>
+                            <img src="path/to/your/logo_simbol.png" alt="Kolovrat Symbol" width="40" height="40">
                         </div>
+
                         <a href="#" class="logo-font text-2xl text-gold-400 hover:text-white transition-colors">
                             Kolovrat Studio
                         </a>
