--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <div class="kolovrat-symbol mr-3">
-                    <img src="path/to/your/logo_simbol.png" alt="Kolovrat Symbol" width="40" height="40">
+                    <img src="logo_symbol.png" alt="Kolovrat Symbol" width="40" height="40">
                 </div>
 
                 <a href="#" class="logo-font text-3xl text-gold-500 hover:text-gold-300 transition-colors">
@@ -545,7 +545,7 @@
                 <div>
                     <div class="flex items-center mb-4">
                         <div class="kolovrat-symbol mr-3">
-                            <img src="path/to/your/logo_simbol.png" alt="Kolovrat Symbol" width="40" height="40">
+                            <img src="logo_symbol.png" alt="Kolovrat Symbol" width="40" height="40">
                         </div>
 
                         <a href="#" class="logo-font text-2xl text-gold-400 hover:text-white transition-colors">
