--- a/index.html
+++ b/index.html
@@ -951,5 +951,6 @@ Website: [Your Website URL]<br>
             card.style.boxShadow = `${-rotateY * 2}px ${rotateX * 2}px 20px rgba(0, 0, 0, 0.3)`;
         });
     });
+    </script>
 </body>
 </html>
