--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto text-gold-200">
                 Forging legend from the depths of Slavic mythology
             </p>
-            <div class="flex justify-center space-x-4">
+            <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-4">
                 <a href="#game" class="btn-gold px-8 py-3 rounded font-bold">Explore Our Game</a>
                 <a href="#community" class="border border-gold-500 text-gold-400 px-8 py-3 rounded font-bold hover:bg-gold-500/10 transition-colors">Join Our Community</a>
             </div>
@@ -760,10 +760,10 @@ Website: https://kolovratstudio.github.io/home<br>
     </footer>
     
     <script>
-           // Mobile navigation menu toggle
-  const menuBtn = document.querySelector('.menu-btn');
-  const navLinks = document.querySelector('.nav-links');
-  const closeBtn = document.querySelector('.close-btn');
+    // Mobile navigation menu toggle
+    const menuBtn = document.querySelector('.menu-btn');
+    const navLinks = document.querySelector('.nav-links');
+    const closeBtn = document.querySelector('.close-btn');
 
   menuBtn.addEventListener('click', function() {
   navLinks.classList.toggle('active');
@@ -776,7 +776,7 @@ Website: https://kolovratstudio.github.io/home<br>
   }
 });
 
-  closeBtn.addEventListener('click', function() {
+closeBtn.addEventListener('click', function() {
   navLinks.classList.remove('active');
   navLinks.classList.add('hidden');
   navLinks.classList.remove('flex');
