--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             
-            <ul class="nav-links hidden md:flex space-x-8">
+            <ul class="nav-links hidden md:flex flex-col md:flex-row absolute md:static top-0 right-0 bg-black/90 md:bg-transparent w-2/3 md:w-auto h-screen md:h-auto items-center justify-center transition-all duration-300 z-40">
+
                 <li class="close-btn text-gold-400 text-2xl cursor-pointer absolute top-5 right-5 md:hidden">
                     <i class="fas fa-times"></i>
                 </li>
@@ -770,24 +771,21 @@ const menuBtn = document.querySelector('.menu-btn');
 const navLinks = document.querySelector('.nav-links');
 const closeBtn = document.querySelector('.close-btn');
 
-// Mobile menu open
+// Open menu
 menuBtn.addEventListener('click', () => {
-  navLinks.classList.add('active');
-  navLinks.classList.remove('hidden');
-  navLinks.classList.add('flex');
+  navLinks.classList.toggle('hidden');
+  navLinks.classList.toggle('flex');
 });
 
-// Mobile menu close
+// Close menu
 closeBtn.addEventListener('click', () => {
-  navLinks.classList.remove('active');
   navLinks.classList.add('hidden');
   navLinks.classList.remove('flex');
 });
 
-// Close menu when clicking a link
+// Close when clicking any link
 document.querySelectorAll('.nav-links a').forEach(link => {
   link.addEventListener('click', () => {
-    navLinks.classList.remove('active');
     navLinks.classList.add('hidden');
     navLinks.classList.remove('flex');
   });
