--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
                 <i class="fas fa-bars"></i>
             </div>
             
-            <ul class="nav-links flex md:flex space-x-8 md:static md:flex-row md:justify-end">
-
+            <ul class="nav-links fixed top-0 right-[-100%] w-2/3 h-screen bg-black/90 flex-col items-center justify-center space-y-8 transition-all duration-500 md:static md:flex md:flex-row md:space-x-8 md:space-y-0 md:w-auto md:h-auto md:bg-transparent">
                 <li class="close-btn text-gold-400 text-2xl cursor-pointer absolute top-5 right-5 md:hidden">
                     <i class="fas fa-times"></i>
                 </li>
@@ -778,20 +777,20 @@ const menuBtn = document.querySelector('.menu-btn');
 const navLinks = document.querySelector('.nav-links');
 const closeBtn = document.querySelector('.close-btn');
 
-// Open the mobile menu
+// Open mobile menu
 menuBtn.addEventListener('click', () => {
-  navLinks.classList.toggle('active');
+  navLinks.style.right = "0";
 });
 
-// Close when clicking X
+// Close mobile menu
 closeBtn.addEventListener('click', () => {
-  navLinks.classList.remove('active');
+  navLinks.style.right = "-100%";
 });
 
-// Close when clicking a link inside
+// Also close when clicking a nav link
 document.querySelectorAll('.nav-links a').forEach(link => {
   link.addEventListener('click', () => {
-    navLinks.classList.remove('active');
+    navLinks.style.right = "-100%";
   });
 });
 
